Penambahan fitur list pendaftar

--- a/src/assets/i18n/US/en.json
+++ b/src/assets/i18n/US/en.json
@@ -22,6 +22,11 @@
       "news": "News",
       "news_child": "Published",
       "publish": "New Publish",
+      "registrant": "Registrant",
+      "reg_all": "All",
+      "reg_hack": "HackToday",
+      "reg_apps": "AppsToday",
+      "reg_seminar": "Seminar",
       "editors": "Editors",
       "ck_editor": "CKEditor",
       "components": "Components",
